# cv2_fastapi

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml
src/: App.svelte  app.css
webcam/: __init__.py  main.py
