[tool.poetry]
name = "webcam"
version = "0.0.0"
description = ""
authors = ["Gilad Kutiel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
fastapi = "^0.111.0"
websockets = "^12.0"
mediapipe = "^0.10.14"
scipy = "^1.14.0"
transforms3d = "^0.4.2"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
